# fraudstream-intelligence-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  geoip-refresh.yml  weekly-geoip-refresh.yml
.specify/memory/: constitution.md
docs/: security-policy.md  tech-debt.md
docs/runbooks/: credential-rotation.md
infra/: docker-compose.yml
infra/flink/: .dockerignore  Dockerfile  alerts.yaml  flink-conf.yaml
infra/kafka/: topics.sh
infra/prometheus/: prometheus.yml
monitoring/alerts/: api-ingestion.yml
monitoring/dashboards/: api-ingestion.json
pipelines/ingestion/api/: config.py  metrics.py  producer.py  telemetry.py
pipelines/ingestion/shared/: dlq_producer.py  schema_registry.py
pipelines/ingestion/shared/pii_masker/: __init__.py  config.py  masker.py  validators.py
pipelines/processing/: config.py  job.py  logging_config.py  metrics.py  telemetry.py
pipelines/processing/operators/: device.py  enricher.py  geolocation.py  velocity.py
pipelines/processing/schemas/: processing-dlq-v1.avsc
pipelines/processing/shared/: avro_serde.py  dlq_sink.py
scripts/: generate_transactions.py
specs/001-kafka-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kafka-ingestion-pipeline/contracts/: dlq-envelope-v1.avsc  txn-api-v1.avsc
specs/002-flink-stream-processor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-flink-stream-processor/checklists/: cicd.md  data-contracts.md  fr-sc.md  observability.md  plan.md  requirements.md  security.md
specs/002-flink-stream-processor/contracts/: enriched-txn-v1.avsc
tests/contract/: test_schema_contracts.py
tests/integration/: conftest.py  test_api_ingestion.py  test_enrichment_pipeline.py
tests/load/: test_memory.py  test_throughput.py
tests/unit/: test_pii_masker.py  test_producer.py  test_producer_extended.py  test_schema_registry.py
tests/unit/processing/: test_core_modules.py  test_device.py  test_dlq_sink.py  test_geolocation.py  test_velocity.py
